# wavelib

./: .gitignore  .travis.yml  CMakeLists.txt  COPYRIGHT  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  about.html  appveyor.yml  cdisplay.html  denoise.html  display.html  frdenoise.html  front.html  index.html  method.html  report.html
auxiliary/: CMakeLists.txt  denoise.c  denoise.h  waux.c  waux.h
data/: Blocks7.txt  Bumps7.txt  Doppler8.txt  HeaviSine8.txt  Heavisine1024.txt  PiecePoly20.txt  PiecePolynomial6.txt  PieceRegular10.txt  PieceRegular6.txt  bumps6.txt  ecg.txt  heavisine.txt  noisbloc.txt  noisybumps.txt  noisyheavisine.txt  piecepoly.txt  pieceregular.txt  pieceregular1024.txt  pieceregular2048.txt  wavedb.json
denoise/: CMakeLists.txt  denoise.c  denoise.h
header/: denoise.h  wauxlib.h  wavelib.h
js/: app.js  index_user_scripts.js  ngfile.js  plotly.js  wavebak.js  wavelet.js  wavelib.bak3.js  wavelib.js  wavewrapper.js
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  conv.c  conv.h  cwt.c  cwt.h  cwtmath.c  cwtmath.h  hsfft.c  hsfft.h  real.c  real.h  wavefilt.c  wavefilt.h  wavefunc.c  wavefunc.h  wavelib.c  wavelib.h  wtmath.c  wtmath.h
stylesheets/: free.css
test/: CMakeLists.txt  PieceRegular10.txt  cwttest.c  denoisetest.c  dwpttest.c  dwt2test.c  dwttest.c  modwt2test.c  modwtdenoisetest.c  modwttest.c  noisybumps.txt  noisyheavisine.txt  pieceregular1024.txt  s1.txt  signal.txt  swt2test.c  swttest.c  wtreetest.c
unitTests/: CMakeLists.txt  CTestTestfile.cmake  Makefile
unitTests/wavelibBoostTests/: BoostTest.cpp  BoostTest.h  CMakeLists.txt  CTestTestfile.cmake  Makefile  tst_dwt.cpp
